--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     rel="stylesheet"
     href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"  />
   <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
-    <link rel="stylesheet" href="C:\Users\LENOVO\Downloads\css.css">
+    <link rel="stylesheet" href="stylecss.css">
   </head>
   <body>
     <!-- Navbar Start -->
@@ -165,7 +165,7 @@
           <div class="row">
             <div class="col-md-6">
               <div class="card mb-3">
-                <img src="C:\Users\LENOVO\Documents\bvc.jpg" class="card-img-top" alt="...">
+                <img src="bvc.jpg" class="card-img-top" alt="...">
                 <div class="card-body">
                   <h5 class="card-title">Bachelor's Degree</h5>
                   <p class="card-text">BVC Institute of Technology and Science.</p>
@@ -177,7 +177,7 @@
             </div>
             <div class="col-md-6">
               <div class="card mb-3">
-                <img src="C:\Users\LENOVO\Documents\college.jpg" class="card-img-top" alt="...">
+                <img src="college.jpg" class="card-img-top" alt="...">
                 <div class="card-body">
                   <h5 class="card-title">Intermediate</h5>
                   <p class="card-text">sri chaitanya Junior College.</p>
@@ -191,7 +191,7 @@
           <div class="row">
             <div class="col-md-6">
               <div class="card mb-3">
-                <img src="C:\Users\LENOVO\Documents\school.jpg" class="card-img-top" alt="...">
+                <img src="school.jpg" class="card-img-top" alt="...">
                 <div class="card-body">
                   <h5 class="card-title">SSC</h5>
                   <p class="card-text">ST mary's E.M.H school.</p>
