--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
                         <div class="col-md-6">
                           <ul>
                             <li>Technologies Working on: Mean Stack</li>
-                            <li>Resume <a href="file:///C:/Users/LENOVO/Downloads/K.Priyanka%20resume.pdf" target="_blank" rel="noopener noreferrer" class="text-decoration-none">Click here</a></li>
+                            <li>Resume <a href="file:K.Priyanka%20resume.pdf" target="_blank" rel="noopener noreferrer" class="text-decoration-none">Click here</a></li>
                           </ul>
                         </div>
                       </div>
