--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
                         <div class="col-md-6">
                           <ul>
                             <li>Technologies Working on: Mean Stack</li>
-                            <li>Resume <a href="file:K.Priyanka resume.pdf" target="_blank" rel="noopener noreferrer" class="text-decoration-none">Click here</a></li>
+                            <li>Resume <a href="https://in.docworkspace.com/d/sIN7zo65p97n_pQY?sa=share.copy_link" target="_blank" rel="noopener noreferrer" class="text-decoration-none">Click here</a></li>
                           </ul>
                         </div>
                       </div>
